--- a/mockups/admin/css/users.css
+++ b/mockups/admin/css/users.css
@@ -23,3 +23,16 @@ html {
     color-scheme: light;
     /* background-color: var(--c-green); */
   }
+  th {
+    cursor: pointer;
+  }
+  .icon-arrow {
+    font-size: 16px;
+    display: inline-block; 
+
+  }
+  .icon-arrow.down {
+    transform: rotate(180deg); /* Rotate the arrow by 180 degrees */
+  }
+  
+ 
