--- a/mockups/admin/css/users.css
+++ b/mockups/admin/css/users.css
@@ -23,8 +23,10 @@ html {
     color-scheme: light;
     /* background-color: var(--c-green); */
   }
-  th {
+  th:hover {
     cursor: pointer;
+    background-color: #f29542;
+    transition: 0.5s;
   }
   .icon-arrow {
     font-size: 16px;
@@ -33,3 +35,59 @@ html {
   .icon-arrow.down {
     transform: rotate(180deg); /* rotate the arrow */
   }  
+html{
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #6cc25b;
+}
+table{
+  table-layout: fixed;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 20px auto; 
+  padding: 5px; 
+  width: 95%;
+  
+  background-color: #f1f1f1;
+  border: 1px solid black;
+  border-radius: 10px; 
+  border-collapse: collapse;
+}
+td, th{
+  padding: 20px;
+  border-bottom: 1px solid black; 
+  text-align: center;
+}
+th{
+  background-color:#ea0f81; 
+  color:#f5f5f5; 
+}
+#table-options{
+  margin-left: 3%;
+  margin-right: 45%;
+  margin-top: 2%;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  background-color: #ea0f81; 
+  color:#f1f1f1;
+}
+#add-user-btn{
+  font-size: 16px;
+  border-radius: 40px;
+  border: none;
+  margin-top: 1%;
+  margin-left: 3%;
+  padding: 15px;
+}
+#add-user-btn:hover{
+  cursor: pointer;
+  transition: 0.5s;
+  background-color: #008dd2;
+  color:#f1f1f1;
+}
+#search{
+  margin-top: 10px;
+  padding: 5px;
+  width: 80%;
+}
