--- a/mockups/admin/css/users.css
+++ b/mockups/admin/css/users.css
@@ -53,9 +53,11 @@ table{
   border-collapse: collapse;
 }
 td, th{
-  padding: 20px;
+  padding: 10px;
   border-bottom: 1px solid black; 
   text-align: center;
+  max-width: 100px; 
+  overflow-wrap: break-word; 
 }
 th{
   background-color:#ea0f81; 
